tests/ui/pattern/usefulness/issue-3096-2.stderr
error[E0004]: non-exhaustive patterns: type `*const Bottom` is non-empty
  --> $DIR/issue-3096-2.rs:5:11
   |
LL |     match x { }
   |           ^
   |
   = note: the matched value is of type `*const Bottom`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
